# Ringo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py
pyutils/: __init__.py  cyclicpart.py
pyutils/pyxyz/: __init__.py  moltopology.py  utils.py
release_assemble/: release_assemble.py
release_assemble/example_scripts/: run_ringo.py
release_assemble/ringo_release/: setup.py
release_assemble/ringo_release/ringo/: __init__.py
release_assemble/ringo_release/ringo/cpppart/: cpppart.py
release_assemble/test_systems/: csd_AAGGAG10.sdf  csd_ABOJOR.sdf  csd_ABOMOT.sdf  csd_ACICOE.sdf  csd_BIDPIN10.sdf  csd_BIHYAS10.sdf  csd_CAHWEN.sdf  csd_CALSAR.sdf  csd_CAMVES01.sdf  csd_CAZVEF.sdf  csd_CGPGAP10.sdf  csd_CHPSAR.sdf  csd_CIYKUR.sdf  csd_CIYLAY.sdf  csd_CLPGDH.sdf  csd_COHVAW.sdf  csd_CTILIH10.sdf  csd_CTVHVH01.sdf  csd_CUQRUB.sdf  csd_CYVIHV10.sdf  csd_DACMAW.sdf  csd_DAFGIA.sdf  csd_DALPUC.sdf  csd_DEKSAN.sdf  csd_DIGTOC.sdf  csd_FAGFEZ.sdf  csd_FEGJAD.sdf  csd_FINWEE10.sdf  csd_FIVSAE.sdf  csd_FIXYEQ.sdf  csd_GAFSEL.sdf  csd_GEZBUI.sdf  csd_GIHKOX10.sdf  csd_HAXMOI10.sdf  csd_HEBLIJ.sdf  csd_HIKPAS01.sdf  csd_ICYSPA.sdf  csd_IDIMAJ.sdf  csd_JINWUZ.sdf  csd_JOKSAD.sdf  (+110 more)
release_assemble/test_systems/limit_cases/: atropo_madeup.sdf  atropo_nature.sdf  threeDofBridge.sdf  twoDofBridge.sdf
src/: cyclicpart.h  fix_files.py  fragment.h  fused_assembler.h  fusion_resolver.h  generic_fragment.h  geomunit.h  main.cpp  molecule.cpp  molecule.h  polyhedron.h  problem.h  refiners.h  sideheaders.h  solvers.cpp  solvers.h  utils.cpp  utils.h
src/pytlc/: rigidfrag.cpp  rigidfrag.h  ringext.cpp  ringext.h  sturm.c  tlcmain.cpp  tlcmain.h  utils.cpp  utils.h
src/pyxyz/: confpool.cpp  confpool.h  molproxy.cpp  molproxy.h  rmsd.h  utils.cpp  utils.h
